--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="titulo">MULTISERVICIOS JG</h1>
 
     <div id="lateral">
-      <li><img src="./../propio/imagenes/logo.png" alt="" class="logo" /></li>
+      <li><img src="./imagenes/logo.png" alt="" class="logo" /></li>
       <li><a href="#sobre" class="selected">Sobre Nosotros</a></li>
       <li><a href="#Tienda">Tienda</a></li>
       <li><a href="#Taller">Taller</a></li>
@@ -27,7 +27,7 @@
         encontrar nuestra lista de productos disponibles, informacion de nuestro
         taller y de los trabajos que realizamos
       </p>
-      <img class="logo2" src="./../imagenes/multiservicios/logoo.png" alt="">
+      <img class="logo2" src="./imagenes/logoo.png" alt="">
     </div>
   </section>
 
@@ -36,13 +36,13 @@
     <p class="informacion2">En esta seccion podra ver algunos productos que tenemos en nuestra tienda virtual.</p>
     <p class="informacion2">Aqui podra encontrar productos como bugias, rotulas, terminales, fan clutch, gomas de barra, entre mmuchas cosas mas</p>
     <div class=" productos">
-      <img  src="./../imagenes/multiservicios/bugias.png" alt="" width="150" height="150">
-      <img  src="./../imagenes/multiservicios/gomas de barra.jpg" alt="" width="150" height="150">
-      <img  src="./../imagenes/multiservicios/bugias2.jpg" alt="" width="150" height="150">
-      <img  src="./../imagenes/multiservicios/FAN-skp.jpg" alt="" width="150" height="150">
-      <img  src="./../imagenes/multiservicios/FAN-WK.jpg" alt="" width="150" height="150">
-      <img  src="./../imagenes/multiservicios/terminal.jpg" alt="" width="150" height="150">
-      <img  src="./../imagenes/multiservicios/rotula.jpg" alt="" width="150" height="150">
+      <img  src="./imagenes/bugias.png" alt="" width="150" height="150">
+      <img  src="./imagenes/gomas de barra.jpg" alt="" width="150" height="150">
+      <img  src="./imagenes/bugias2.jpg" alt="" width="150" height="150">
+      <img  src="./imagenes/FAN-skp.jpg" alt="" width="150" height="150">
+      <img  src="./imagenes/FAN-WK.jpg" alt="" width="150" height="150">
+      <img  src="./imagenes/terminal.jpg" alt="" width="150" height="150">
+      <img  src="./imagenes/rotula.jpg" alt="" width="150" height="150">
      
     </div>
   </section>
